	local variable that masked outside scope variable name.

	* libipmidetect/ipmidetect.c (_get_data): Rename local variable
	that masked outside scope variable name.

	* common/miscutil/hostlist.c (_get_bracketed_list): Remove
	unnecessary comparison.

	* common/toolcommon/pstdout.c (pstdout_set_debug_flags): Fix typo
	&& instead of &.

2019-11-27 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-parse-util.c
	(ipmi_sdr_parse_sensor_name, ipmi_sdr_parse_entity_sensor_name):
	Fix invalid parameter check to fix compiler warning.

2019-11-18 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/ipmi-fru.c: Workaround unexpected completion
	code indicating no FRU data available.

2019-08-16 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-cache-create.c: Workaround Dell
	Poweredge FC830 issue, where the last SDR entry returns errors
	when being read.  Since it's the last entry, we assume there is a
	bug in the motherboard's implementation.  Just forget about the
	last entry and move on.

2019-08-15 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sensor-common.c: Workaround QuantaPlex
	T42D-2U issue, where an event only record states that it is a
	threshold sensor and a "other units based sensor", but does not
	provide any units.

2019-04-09 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api: Fix invalid error code return.

2019-02-08 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/interpret: Support interpretation of power unit +
	transition severity sensors / events, power unit + state sensors /
	events.

	* libfreeipmi/interpret: Support intepretation of system firmware
	progress + device present sensors / events, system firmware
	progress + state sensors / events.

	* libfreeipmi/interpret: Support intepretation of management subsystem
	health + transition severity sensors / events, management subsystem
	health + device present sensors / events.

	* libfreeipmi/interpret: Support intepretation of system event +
	transition severity sensors / events
